gem2deb (0.20) UNRELEASED; urgency=medium

  * gem2deb-test-runner: when checking dependencies, don't add
    rubygems-integration paths from different Ruby versions to GEM_PATH.
  * gem2deb/rake/testtask: Use options to make all test runs verbose by
    default
  * gem2deb/rake/spectask: add a utility task for running tests with rspec
  * dh-make-ruby: generate debian/ruby-tests.rake using gem2deb/rake/spectask

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 20 Jul 2015 23:12:27 -0300

gem2deb (0.19) unstable; urgency=medium

  * gem2deb: download .gem files in a temporary directory
  * gem2deb-test-runner: add dependency on ruby-minitest
  * dh-make-ruby: add README's uncommented to debian/ruby-foo.docs

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 15 Jul 2015 18:28:03 -0300

gem2deb (0.18.3) unstable; urgency=medium

  * gem2deb-test-runner: add dependency on ruby-test-unit
    - Ruby 2.1 had an embedded copy of test/unit, so packages using it in
      their test suite got away with not build-depending on ruby-test-unit
    - Ruby 2.2 does not include test/unit anymore, so a few dozens of packages
      now FTBFS. Since we have a transition to make, instead of waiting for
      all those packages to be fixed, let's workaround that centrally here.

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 23 Jun 2015 20:37:54 -0300

gem2deb (0.18.2) unstable; urgency=medium

  * gem2deb-test-runner: when under autopkgtest, don't pass any GEM_PATH at
    all, no even an empty one. This fixes dependency checks under autopkgtest.
  * dh-make-ruby: convert *all* underscores (`_`) to dashes (`-`) when
    converting gem names to source package names (not just the first one).
  * dh_ruby: install gemspecs to rubygems-integration directories using
    API_VERSION (e.g. 2.2.0) and not the short version (e.g. 2.2)
  * dh-make-ruby: avoid converting gem dependencies on exact versions
    (= 0.1.2) to Debian; that is never going to work.
