@@ -1,7 +1,9 @@
 gem2deb (0.20) UNRELEASED; urgency=medium
 
-  * gem2deb-test-runner: when checking dependencies, don't add
-    rubygems-integration paths from different Ruby versions to GEM_PATH.
+  * gem2deb-test-runner:
+    - when checking dependencies, don't add rubygems-integration paths from
+      different Ruby versions to GEM_PATH.
+    - add dependency on rake, and simplify the command line that runs rake.
   * gem2deb/rake/testtask: Use options to make all test runs verbose by
     default
   * gem2deb/rake/spectask: add a utility task for running tests with rspec
